syntax = "proto2";
package io.apicurio.registry.search.common;
import "common.proto";
option java_package = "io.apicurio.registry.search.common";

/**
  * @Indexed
  */
message Artifact {
    /* @Field(index=Index.YES, analyze = Analyze.YES, store = Store.NO) */
    optional string artifactId = 1;
    /* @Field(index=Index.YES, analyze = Analyze.NO, store = Store.NO) */
    optional io.apicurio.registry.common.proto.ArtifactType type = 2;
    /* @Field(index=Index.YES, analyze = Analyze.YES, store = Store.NO) */
    optional string content = 3;
    /* @Field(index=Index.YES, analyze = Analyze.NO, store = Store.NO) */
    optional int64 version = 4;
    /* @Field(index=Index.YES, analyze = Analyze.NO, store = Store.NO) */
    optional fixed64 globalId = 5;

    /* Metadata fields */

    /* @Field(index=Index.YES, analyze = Analyze.YES, store = Store.NO) */
    optional string name = 6;
    /* @Field(index=Index.YES, analyze = Analyze.YES, store = Store.NO) */
    optional string description = 7;
    /* @Field(index=Index.YES, analyze = Analyze.YES, store = Store.NO) */
    optional string createdBy = 8;
}
